--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("/img/1645885919_1.jpeg");
+  background-image: url("./img/1645885919_1.jpeg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
